--- a/contact.html
+++ b/contact.html
@@ -160,14 +160,14 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Inicio</a>
                             <a href="shop.html" class="nav-item nav-link">serviços</a>
-                            <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
-                            <div class="nav-item dropdown">
+                           <!--<a href="detail.html" class="nav-item nav-link">Shop Detail</a>-->
+                            <!--<div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="cart.html" class="dropdown-item">Shopping Cart</a>
                                     <a href="checkout.html" class="dropdown-item">Checkout</a>
                                 </div>
-                            </div>
+                            </div>-->
                             <a href="FAQ.html" class="nav-item nav-link">FAQ</a>
                             <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
@@ -177,7 +177,50 @@
                         </div>
                     </div>
                 </nav>
-               
+                <div id="header-carousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" style="height: 410px;">
+                            <img class="img-fluid" src="img/slider/slider1.jpg" alt="Image">
+                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                <div class="p-3" style="max-width: 700px;">
+                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">Promova sua marca com estilo</h4>
+                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Cartões de visita</h3>
+                                    <a href="" class="btn btn-light py-2 px-3">Solicite um orçamento</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item" style="height: 410px;">
+                            <img class="img-fluid" src="img/slider/slider2.png" alt="Image">
+                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                <div class="p-3" style="max-width: 700px;">
+                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">Transforme seu espaço em um ambiente único</h4>
+                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Banners</h3>
+                                    <a href="" class="btn btn-light py-2 px-3">Solicite um orçamento</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item" style="height: 410px;">
+                            <img class="img-fluid" src="img/slider/slider3.jpg" alt="Image">
+                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                <div class="p-3" style="max-width: 700px;">
+                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">Transforme seu espaço em um ambiente único</h4>
+                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Papel de Parede</h3>
+                                    <a href="" class="btn btn-light py-2 px-3">Solicite um orçamento</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
+                        <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                            <span class="carousel-control-prev-icon mb-n2"></span>
+                        </div>
+                    </a>
+                    <a class="carousel-control-next" href="#header-carousel" data-slide="next">
+                        <div class="btn btn-dark" style="width: 45px; height: 45px;">
+                            <span class="carousel-control-next-icon mb-n2"></span>
+                        </div>
+                    </a>
+                </div>
         </div>
     </div>
     <!-- Navbar End -->
