--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,51 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active">Inicio</a>
                             <a href="shop.html" class="nav-item nav-link">Serviços</a>
-                            <a href="FAQ.html" class="nav-item nav-link">Categorias</a>
+                            <li>
+                                <a href="#" class="nav-item nav-link">Categorias</a>
+                                <div class="mega-box">
+                                    <div class="content">
+                                        <div class="row">
+                                            <img  src="img/rotulo/rot4.jpg" alt="">
+                                        </div>
+                                        <div class="row">
+                                            <header>Identidade visual </header>
+                                            <ul class="mega-links">
+                                            <a href="shop.html#cartao" class="dropdown-item">Cartões de visita</a>
+                                <a href="shop.html#papel" class="dropdown-item">Papel de parede </a>
+                                <a href="shop.html#rotulo" class="dropdown-item">Rótulos</a>
+                                <a href="shop.html#logotipo" class="dropdown-item">Logotipo</a>
+                                <a href="shop.html#outdoor" class="dropdown-item">Outdoor</a>
+
+                                            </ul>
+                                        </div>
+                                        <div class="row">
+                                            <header>Comunicação visual</header>
+                                            <ul class="mega-links">
+                                            <a href="shop.html#cartaz" class="dropdown-item">Cartazes</a>
+                                            <a href="shop.html#menu" class="dropdown-item">Menu</a>
+                                            <a href="shop.html#cracha" class="dropdown-item">Cracha</a>
+                                            <a href="shop.html#rotulo" class="dropdown-item">Rótulos</a>
+                                            <a href="shop.html#album" class="dropdown-item">Capa de álbum</a>
+
+                                            </ul>
+                                        </div>
+                                        <div class="row">
+                                            <header>Personalização</header>
+                                            <ul class="mega-links">
+                                            <a href="shop.html#branding" class="dropdown-item">Branding de viatura</a>
+                                             <a href="shop.html#flags" class="dropdown-item">Bandeira </a>
+                                <a href="shop.html#envelope" class="dropdown-item">Envelope</a>
+                                <a href="shop.html#matricula" class="dropdown-item">Matrículas </a>
+
+
+                                            </ul>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </li>
                             <a href="FAQ.html" class="nav-item nav-link">FAQ</a>
                             <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
@@ -181,7 +225,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-lg-5 mb-5">
+            <div class="col-lg-5 mb-5 contact">
                 <h5 class="font-weight-semi-bold mb-3">Entre em contato conosco</h5>
                 <p>Entre em contato conosco hoje mesmo para discutir seus projetos e descobrir como podemos ajudá-lo a alcançar seus objetivos de negócios com nossos serviços de design gráfico de alta qualidade. Estamos ansiosos para trabalhar com você!</p>
                 <div class="d-flex flex-column">
@@ -201,49 +245,47 @@
         <div class="row px-xl-5 pt-5">
             <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
                 <a href="" class="text-decoration-none">
-                    <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1">E</span>Shopper</h1>
+                    <h1 class="m-0 display-5 font-weight-semi-bold mr-5"><img src="img/logo1.jpg" alt="Nome do logotipo"></h1>
                 </a>
-                <p>Dolore erat dolor sit lorem vero amet. Sed sit lorem magna, ipsum no sit erat lorem et magna ipsum dolore amet erat.</p>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>info@example.com</p>
-                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+012 345 67890</p>
+                <p>A K-Imagem é uma empresa especializada na criação de identidade visual para empresas e marcas, oferecendo serviços de design de logotipos, papelaria, brindes, impressão e muito mais.</p>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i>Rua Anguane, Maputo, Mozambique</p>
+                <p class="mb-2"><i class="fa fa-envelope text-primary mr-3"></i>kimagemdesign@gmail.com</p>
+                <p class="mb-0"><i class="fa fa-phone-alt text-primary mr-3"></i>+258 84/86 338 3333</p>
             </div>
             <div class="col-lg-8 col-md-12">
                 <div class="row">
                     <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
+                        <h5 class="font-weight-bold text-dark mb-4">Links</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                            <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                            <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
-                            <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                            <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Serviços</a>
+                            <a class="text-dark mb-2" href="FAQ.html"><i class="fa fa-angle-right mr-2"></i>FAQ</a>
+                            <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacte-nos</a>
                         </div>
                     </div>
                     <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Quick Links</h5>
+                        <h5 class="font-weight-bold text-dark mb-4">Serviços</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-dark mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Our Shop</a>
-                            <a class="text-dark mb-2" href="detail.html"><i class="fa fa-angle-right mr-2"></i>Shop Detail</a>
-                            <a class="text-dark mb-2" href="cart.html"><i class="fa fa-angle-right mr-2"></i>Shopping Cart</a>
-                            <a class="text-dark mb-2" href="checkout.html"><i class="fa fa-angle-right mr-2"></i>Checkout</a>
-                            <a class="text-dark" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                            <a class="text-dark mb-2" href="shop.html#cartao"><i class="fa fa-angle-right mr-2"></i>Identidade Visual</a>
+                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Personalização</a>
+                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Comunicação Visual</a>
+                            <a class="text-dark mb-2" href="shop.html"><i class="fa fa-angle-right mr-2"></i>Sinalização</a>
+                            <a class="text-dark mb-2" href="shop.html#estampagem"><i class="fa fa-angle-right mr-2"></i>Estampagem</a>
+                            <a class="text-dark" href="shop.html#poster"><i class="fa fa-angle-right mr-2"></i>Impressão</a>
                         </div>
                     </div>
                     <div class="col-md-4 mb-5">
-                        <h5 class="font-weight-bold text-dark mb-4">Newsletter</h5>
+                        <h5 class="font-weight-bold text-dark mb-4">Boletim Informativo</h5>
                         <form action="">
                             <div class="form-group">
-                                <input type="text" class="form-control border-0 py-4" placeholder="Your Name" required="required" />
+                                <input type="text" class="form-control border-0 py-4" placeholder="Teu Nome" required="required" />
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control border-0 py-4" placeholder="Your Email"
+                                <input type="email" class="form-control border-0 py-4" placeholder="Teu Email"
                                     required="required" />
                             </div>
                             <div>
-                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Subscribe Now</button>
+                                <button class="btn btn-primary btn-block border-0 py-3" type="submit">Subscreva Agora</button>
                             </div>
                         </form>
                     </div>
@@ -253,9 +295,9 @@
         <div class="row border-top border-light mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-dark">
-                    &copy; <a class="text-dark font-weight-semi-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed
-                    by
-                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">HTML Codex</a>
+                    &copy; <a class="text-dark font-weight-semi-bold" href="#">k-imagem</a>. Todos Direitos Reservados. Desenhado pela
+                    
+                    <a class="text-dark font-weight-semi-bold" href="https://htmlcodex.com">explicador</a>
                 </p>
             </div>
             <div class="col-md-6 px-xl-0 text-center text-md-right">
